# pjecz-tauro-cli

./: .gitignore  README.md  crear_subir_respaldo.bat  generar_sicgd_csv.bat  generar_sicgd_csv.py  guia-win-2016.md  pyproject.toml  requirements.txt  setup.py  win-instalation.md
