[tool.poetry]
name = "pjecz-tauro-cli"
version = "0.1.0"
description = ""
authors = ["ricardo <6439738+ricval@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tabulate = "^0.9.0"
python-dotenv = "^1.0.1"
click = "^8.1.8"
cx-freeze = "^7.2.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
